--- a/myFinances/src/app/tab1/tab1.page.scss
+++ b/myFinances/src/app/tab1/tab1.page.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    background-color: #15DC4E;
+    background-color: whitesmoke;
   }
 
   .title {
@@ -29,9 +29,5 @@
   }
 
   .button{
-    background-color:  #201c1c  ;
-  }
-
-  .button:hover {
-    background-color: #15DC4E;
+    background-color:  #15DC4E  ;
   }
