--- a/myFinances/src/global.scss
+++ b/myFinances/src/global.scss
@@ -24,3 +24,13 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+ion-toolbar {
+    --background: #15DC4E;
+    --color: black;
+}
+
+ion-tab-bar {
+    --background: #15DC4E;
+    --color: black;
+}
