--- a/myFinances/src/app/register/register.page.scss
+++ b/myFinances/src/app/register/register.page.scss
@@ -6,3 +6,12 @@
     height: 100%;
     background-color: whitesmoke;
   }
+  ion-toolbar {
+    --background: #15DC4E;
+    --color: black;
+}
+
+ion-tab-bar {
+    --background: #15DC4E;
+    --color: black;
+}
