--- a/myFinances/src/app/register/register.page.html
+++ b/myFinances/src/app/register/register.page.html
@@ -6,6 +6,31 @@
 
 <ion-content [fullscreen]="true">
   <div class="container">
+    <ion-content>
+      <!--<form (ngSubmit)="onSubmit()">-->
+      <form>
+        <ion-item>
+          <ion-label position="floating">Full Name</ion-label>
+          <!-- <ion-input type="text" [(ngModel)]="fullName" name="fullName" required></ion-input> -->
+          <ion-input type="text" name="fullName" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <!--<ion-input type="email" [(ngModel)]="email" name="email" required></ion-input> -->
+          <ion-input type="email" name="email" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <!-- <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input> -->
+          <ion-input type="password" name="password" required></ion-input>
+        </ion-item>
+
+        <ion-button type="submit" expand="block">Register</ion-button>
+      </form>
+    </ion-content>
   </div>
   
 </ion-content>
+
