--- a/myFinances/src/app/login/login.page.html
+++ b/myFinances/src/app/login/login.page.html
@@ -1,12 +1,30 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title  style="text-align: center;">Login</ion-title>
+    <ion-title  style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Login</ion-title>
     <p slot="start" (click)="home()" class="home"><u>Home</u></p>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <div class="container">
+    <ion-content>
+      <!--<form (ngSubmit)="onSubmit()">-->
+      <form>
+        <ion-item>
+          <ion-label position="floating">Email</ion-label>
+          <!--<ion-input type="email" [(ngModel)]="email" name="email" required></ion-input> -->
+          <ion-input type="email" name="email" required></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Password</ion-label>
+          <!-- <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input> -->
+          <ion-input type="password" name="password" required></ion-input>
+        </ion-item>
+
+        <ion-button type="submit" expand="block">Login</ion-button>
+      </form>
+    </ion-content>
   </div>
   
 </ion-content>
