--- a/myFinances/src/app/register/register.page.scss
+++ b/myFinances/src/app/register/register.page.scss
@@ -5,7 +5,14 @@
     align-items: center;
     height: 100%;
     background-color: whitesmoke;
+    font-family: Arial, Helvetica, sans-serif;
   }
+
+  .home:hover{
+    cursor: pointer;
+    color: white;
+}
+
   ion-toolbar {
     --background: #15DC4E;
     --color: black;
@@ -14,4 +21,51 @@
 ion-tab-bar {
     --background: #15DC4E;
     --color: black;
+}
+
+ion-button {
+  --background: #15DC4E;
+  --color:black;
+  width: 100px;
+  margin-top: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  --border-radius: 15%;
+  }
+  
+  ion-button:hover {
+  --background: #039D2E;
+  --border-radius: 15%;
+  border-radius: 15%;
+  box-shadow: 0px 0px 20px 5px #039D2E;
+  --color: white;
+  }
+
+ion-item {
+  --background: whitesmoke;
+  --color: black;
+  width: 300px;
+  margin-top: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+form {
+  background-color: whitesmoke;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+ion-content {
+  --background:whitesmoke;
+}
+
+.already {
+  margin-top: 20px; 
+  color: black;
+}
+
+.already:hover {
+  color: #15DC4E;
 }
