--- a/myFinances/src/app/login/login.page.html
+++ b/myFinances/src/app/login/login.page.html
@@ -23,6 +23,7 @@
         </ion-item>
 
         <ion-button type="submit" expand="block">Login</ion-button>
+        <a href="/register" class="already">Still don't have an account? Register now</a>
       </form>
     </ion-content>
   </div>
