--- a/myFinances/src/app/register/register.page.html
+++ b/myFinances/src/app/register/register.page.html
@@ -1,39 +1,26 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Register</ion-title>
-    <p slot="start" (click)="home()" class="home"><u>Home</u></p>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Register</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" style="background-color: whitesmoke;">
-  <div class="container">
-    <ion-content>
-      <!--<form (ngSubmit)="onSubmit()">-->
-      <form>
-        <ion-item>
-          <ion-label position="floating">Full Name</ion-label>
-          <!-- <ion-input type="text" [(ngModel)]="fullName" name="fullName" required></ion-input> -->
-          <ion-input type="text" name="fullName" required></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label position="floating">Email</ion-label>
-          <!--<ion-input type="email" [(ngModel)]="email" name="email" required></ion-input> -->
-          <ion-input type="email" name="email" required></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label position="floating">Password</ion-label>
-          <!-- <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input> -->
-          <ion-input type="password" name="password" required></ion-input>
-        </ion-item>
-
-        <ion-button type="submit" expand="block">Register</ion-button>
-
-        <a href="/login" class="already">Already having an account? Login</a>
-      </form>
-    </ion-content>
-  </div>
-  
+<ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-label position="stacked">Name</ion-label>
+      <ion-input type="text" [(ngModel)]="user.name"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Email</ion-label>
+      <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Password</ion-label>
+      <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+    </ion-item>
+    <ion-button (click)="register()">Register</ion-button>
+  </ion-list>
 </ion-content>
-
