--- a/myFinances/src/app/login/login.page.html
+++ b/myFinances/src/app/login/login.page.html
@@ -5,27 +5,17 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <div class="container">
-    <ion-content>
-      <!--<form (ngSubmit)="onSubmit()">-->
-      <form>
-        <ion-item>
-          <ion-label position="floating">Email</ion-label>
-          <!--<ion-input type="email" [(ngModel)]="email" name="email" required></ion-input> -->
-          <ion-input type="email" name="email" required></ion-input>
-        </ion-item>
-
-        <ion-item>
-          <ion-label position="floating">Password</ion-label>
-          <!-- <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input> -->
-          <ion-input type="password" name="password" required></ion-input>
-        </ion-item>
-
-        <ion-button type="submit" expand="block">Login</ion-button>
-        <a href="/register" class="already">Still don't have an account? Register now</a>
-      </form>
-    </ion-content>
-  </div>
-  
+<ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-label position="stacked">Email</ion-label>
+      <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="stacked">Password</ion-label>
+        <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+    </ion-item>
+    <ion-button>Login</ion-button>
+    <a class="already" href="/register">Still don't have an account? Register now</a>
+  </ion-list>
 </ion-content>
