--- a/myFinances/src/app/login/login.page.scss
+++ b/myFinances/src/app/login/login.page.scss
@@ -48,7 +48,7 @@ margin-top: 50px;
 font-family: Arial, Helvetica, sans-serif;
 }
 
-form {
+ion-list {
 background-color: whitesmoke;
 display: flex;
 align-items: center;
