--- a/myFinances/src/app/register/register.page.html
+++ b/myFinances/src/app/register/register.page.html
@@ -1,9 +1,7 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
-    </ion-buttons>
-    <ion-title>Register</ion-title>
+    <ion-title  style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Register</ion-title>
+    <p slot="start" (click)="home()" class="home"><u>Home</u></p>
   </ion-toolbar>
 </ion-header>
 
@@ -18,9 +16,10 @@
       <ion-input type="text" [(ngModel)]="user.email"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Password</ion-label>
-      <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+        <ion-label position="stacked">Password</ion-label>
+        <ion-input type="password" [(ngModel)]="user.password" placeholder="Minimum of 6 characters"></ion-input>
     </ion-item>
     <ion-button (click)="register()">Register</ion-button>
+    <a class="already" href="/login">Already having an account? Login now</a>
   </ion-list>
 </ion-content>
