--- a/myFinances/src/app/login/login.page.html
+++ b/myFinances/src/app/login/login.page.html
@@ -9,13 +9,13 @@
   <ion-list>
     <ion-item>
       <ion-label position="stacked">Email</ion-label>
-      <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+      <ion-input type="text" [(ngModel)]="email"></ion-input>
     </ion-item>
     <ion-item>
         <ion-label position="stacked">Password</ion-label>
-        <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+        <ion-input type="password" [(ngModel)]="password"></ion-input>
     </ion-item>
-    <ion-button>Login</ion-button>
+    <ion-button (click)="checkLog()">Login</ion-button>
     <a class="already" href="/register">Still don't have an account? Register now</a>
   </ion-list>
 </ion-content>
