--- a/myFinances/src/app/tabs/tabs.page.html
+++ b/myFinances/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs (ionTabsWillChange)="ionTabsWillChange($event)">
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
@@ -6,7 +6,12 @@
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button *ngIf="isLoggedIn" tab='tab2_login'>
+      <ion-icon aria-hidden="true" name="flag"></ion-icon>
+      <ion-label>Goals</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button *ngIf="!isLoggedIn" tab='tab2'>
       <ion-icon aria-hidden="true" name="flag"></ion-icon>
       <ion-label>Goals</ion-label>
     </ion-tab-button>
