--- a/myFinances/src/app/tabs/tabs.page.html
+++ b/myFinances/src/app/tabs/tabs.page.html
@@ -1,17 +1,17 @@
 <ion-tabs (ionTabsWillChange)="ionTabsWillChange($event)">
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button *ngIf="!isLoggedIn" tab="home">
       <ion-icon aria-hidden="true" name="home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button *ngIf="isLoggedIn" tab='tab2_login'>
-      <ion-icon aria-hidden="true" name="flag"></ion-icon>
-      <ion-label>Goals</ion-label>
+    <ion-tab-button *ngIf="isLoggedIn" tab="home_loggeado">
+      <ion-icon aria-hidden="true" name="home"></ion-icon>
+      <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button *ngIf="!isLoggedIn" tab='tab2'>
+    <ion-tab-button tab='goals'>
       <ion-icon aria-hidden="true" name="flag"></ion-icon>
       <ion-label>Goals</ion-label>
     </ion-tab-button>
