--- a/myFinances/src/app/tabs/tabs.page.html
+++ b/myFinances/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs (ionTabsWillChange)="ionTabsWillChange($event)">
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button *ngIf="!isLoggedIn" tab="home">
+    <ion-tab-button *ngIf="!isLoggedIn" tab="home_loggeado">
       <ion-icon aria-hidden="true" name="home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
