--- a/myFinances/src/app/goals_loggeado/goalsLog.page.html
+++ b/myFinances/src/app/goals_loggeado/goalsLog.page.html
@@ -14,7 +14,7 @@
 <!--Contenido dentro de la tab-->
 <ion-content [fullscreen]="true">
   <div class="container">
-    <h2 class="title" style="color: black;">Welcome to your self-management finance application</h2>
+    <h2 class="title" style="color: black;">LOGGEADO</h2>
     <p class="description" style="color: black;">Here you can keep track of your income and expenses</p>
     <h5 style="color: black;"><u>Actual Balance:</u> 200€</h5>
   </div>
