--- a/myFinances/src/app/tabs/tabs.page.html
+++ b/myFinances/src/app/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs (ionTabsWillChange)="ionTabsWillChange($event)">
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button *ngIf="!isLoggedIn" tab="home_loggeado">
+    <ion-tab-button *ngIf="!isLoggedIn" tab="home">
       <ion-icon aria-hidden="true" name="home"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
@@ -11,12 +11,22 @@
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab='goals'>
+    <ion-tab-button *ngIf="!isLoggedIn" tab='goals'>
       <ion-icon aria-hidden="true" name="flag"></ion-icon>
       <ion-label>Goals</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button *ngIf="isLoggedIn" tab='goals_loggeado'>
+      <ion-icon aria-hidden="true" name="flag"></ion-icon>
+      <ion-label>Goals</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button *ngIf="!isLoggedIn" tab="settings">
+      <ion-icon aria-hidden="true" name="settings"></ion-icon>
+      <ion-label>Settings</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button *ngIf="isLoggedIn" tab="settings_loggeado">
       <ion-icon aria-hidden="true" name="settings"></ion-icon>
       <ion-label>Settings</ion-label>
     </ion-tab-button>
