--- a/myFinances/src/app/register/register.page.html
+++ b/myFinances/src/app/register/register.page.html
@@ -1,7 +1,16 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title  style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Register</ion-title>
-    <p slot="start" (click)="home()" class="home"><u>Home</u></p>
+  <ion-toolbar aria-label="Home">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-icon name="home" (click)="home()"></ion-icon>
+        </ion-col>
+        <ion-col>
+          <ion-title  style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Register</ion-title>
+        </ion-col>
+        <ion-col></ion-col>
+      </ion-row>
+    </ion-grid>
   </ion-toolbar>
 </ion-header>
 
