--- a/myFinances/src/app/goals/goals.page.scss
+++ b/myFinances/src/app/goals/goals.page.scss
@@ -31,3 +31,14 @@
   .button{
     background-color:  #15DC4E  ;
   }
+
+  .color-black {
+    color: black;
+    zoom: 1.5;
+  }
+
+  .color-black:hover {
+    cursor: pointer;
+  }
+  
+  
