--- a/myFinances/src/app/register/register.page.html
+++ b/myFinances/src/app/register/register.page.html
@@ -3,7 +3,7 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-icon name="home" (click)="home()"></ion-icon>
+          <ion-icon name="home" (click)="home()" class="home"></ion-icon>
         </ion-col>
         <ion-col>
           <ion-title  style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Register</ion-title>
