--- a/myFinances/src/app/settingsPage/settings.page.html
+++ b/myFinances/src/app/settingsPage/settings.page.html
@@ -14,12 +14,11 @@
 <!--Contenido dentro de la tab-->
 <ion-content [fullscreen]="true">
   <div class="container">
-    <h2 class="title" style="color: black;">Welcome to your self-management finance application</h2>
-    <p class="description" style="color: black;">Here you can keep track of your income and expenses</p>
-    <h5 style="color: black;"><u>Actual Balance:</u> 200€</h5>
+    <h2 style="color: black;">You have to be logged in to see this page</h2>
+    <ion-icon name="lock-closed-sharp" size="large" class="color-black" (click)="redirect()"></ion-icon>
   </div>
-
 </ion-content>
+
 
 
 
