--- a/myFinances/src/app/home_loggeado/homeLog.page.html
+++ b/myFinances/src/app/home_loggeado/homeLog.page.html
@@ -1,10 +1,5 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button class="button" (click) = "toggleMenu()">
-        <ion-icon name="menu" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
     <ion-title style="text-align: center; margin-right: 5%;">
       Your Finances
     </ion-title>
@@ -17,33 +12,33 @@
     <ion-grid id="buttonContainer">
       <ion-row>
         <ion-col>
-          <ion-button expand="full" (click)="mostrarFormulario1()">DECLARE EXPENSE</ion-button>
+          <ion-button expand="full" (click)="mostrarFormulario1()" class="buttons">DECLARE EXPENSE</ion-button>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-button expand="full" (click)="mostrarFormulario2()">DECLARE INCOME</ion-button>
+          <ion-button expand="full" (click)="mostrarFormulario2()" class="buttons">DECLARE INCOME</ion-button>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-button expand="full" (click)="mostrarFormulario3()">DECLARE CATEGORY LIMIT</ion-button>
+          <ion-button expand="full" (click)="mostrarFormulario3()" class="buttons">DECLARE CATEGORY LIMIT</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
 
 
 
-    <ion-card style="width:40%;padding: 2rem;"class="contenedor-formularios">
+    <ion-card style="width:40%;padding: 2rem; background: transparent;"class="contenedor-formularios">
       <form id="formulario1" style="display:none;">
-        <button class="close-button" (click)="cerrarFormulario('formulario1')">Close</button>
-        <h2 class="form-title" >DECLARE EXPENSE</h2><br>
+        <button class="close-button" (click)="cerrarFormulario('formulario1')" style="color: black; background-color: whitesmoke;"><u>Close</u></button>
+        <h2 class="form-title" style="color: black; margin-left: 25%;">DECLARE EXPENSE</h2><br>
 
 
-        <ion-input label="Quantity" labelPlacement="floating" placeholder="Quantity"></ion-input>
+        <ion-input label="Description" labelPlacement="floating" placeholder="Enter a description" style="color: black;"></ion-input>
 
 
-        <ion-list>
+        <ion-list style="background-color: #f5f5f5;">
           <ion-item>
             <ion-select aria-label="fruit" placeholder="Category">
               <ion-select-option value="apples">Sport</ion-select-option>
@@ -53,25 +48,25 @@
           </ion-item>
         </ion-list>
 
-         <ion-input label="Quantity" labelPlacement="floating" placeholder="Quantity"></ion-input><br>
+         <ion-input label="Quantity" labelPlacement="floating" placeholder="Enter a quantity" style="color: black;"></ion-input><br>
 
-        <ion-button (click)="enviarRespuestas('formulario1')">Send</ion-button>
+        <ion-button (click)="enviarRespuestas('formulario1')" class="send" style="margin-left: 40%;">Send</ion-button>
       </form>
 
       <form id="formulario2" style="display:none;">
-        <button class="close-button" (click)="cerrarFormulario('formulario2')">Close</button>
-        <h2 class="form-title" >DECLARE INCOME</h2><br>
-        <ion-input label="Floating label" labelPlacement="floating" placeholder="Enter text"></ion-input><br>
+        <button class="close-button" (click)="cerrarFormulario('formulario2')" style="color: black; background-color: whitesmoke;"><u>Close</u></button>
+        <h2 class="form-title"  style="color: black; margin-left: 25%;">DECLARE INCOME</h2><br>
+        <ion-input label="Income" labelPlacement="floating" placeholder="Enter an income" style="color: black;"></ion-input><br>
 
 
 
-        <ion-button (click)="enviarRespuestas('formulario2')">Send</ion-button>
+        <ion-button (click)="enviarRespuestas('formulario2')" class="send">Send</ion-button>
       </form>
 
       <form id="formulario3" style="display:none;">
-        <button class="close-button" (click)="cerrarFormulario('formulario3')">Close</button>
-        <h2 class="form-title" >DECLARE CATEGORY LIMIT</h2><br>
-        <ion-list>
+        <button class="close-button" (click)="cerrarFormulario('formulario3')" style="color: black; background-color: whitesmoke;"><u>Close</u></button>
+        <h2 class="form-title"  style="color: black; margin-left: 19%;">DECLARE CATEGORY LIMIT</h2><br>
+        <ion-list style="background-color: #f5f5f5;">
           <ion-item>
             <ion-select aria-label="fruit" placeholder="Category">
               <ion-select-option value="apples">Apples</ion-select-option>
@@ -81,9 +76,9 @@
           </ion-item>
         </ion-list>
 
-        <ion-input label="Floating label" labelPlacement="floating" placeholder="Enter text"></ion-input><br>
+        <ion-input label="Limit" labelPlacement="floating" placeholder="Enter a limit" style="color: black;"></ion-input><br>
 
-        <ion-button  (click) ="enviarRespuestas('formulario3')">Send</ion-button>
+        <ion-button  (click) ="enviarRespuestas('formulario3')" class="send">Send</ion-button>
       </form>
     </ion-card>
   </div>
