--- a/myFinances/src/app/settingsPage/settings.page.scss
+++ b/myFinances/src/app/settingsPage/settings.page.scss
@@ -1,33 +1,42 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    background-color: whitesmoke;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: whitesmoke;
+}
 
-  .title {
-    font-size: 32px;
-    margin-bottom: 20px;
-  }
+.title {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
 
-  .description {
-    font-size: 18px;
-    margin-bottom: 40px;
-    text-align: center;
-  }
+.description {
+  font-size: 18px;
+  margin-bottom: 40px;
+  text-align: center;
+}
 
-  .buttonContent {
-    font-size: 24px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    background-color: #007bff;
-    color: white;
-    margin-bottom: 20px;
-    cursor: pointer;
-  }
+.buttonContent {
+  font-size: 24px;
+  padding: 10px 20px;
+  border-radius: 10px;
+  background-color: #007bff;
+  color: white;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
 
-  .button{
-    background-color:  #15DC4E  ;
-  }
+.button{
+  background-color:  #15DC4E  ;
+}
+
+.color-black {
+  color: black;
+  zoom: 1.5;
+}
+
+.color-black:hover {
+  cursor: pointer;
+}
