--- a/myFinances/src/app/home_loggeado/homeLog.page.html
+++ b/myFinances/src/app/home_loggeado/homeLog.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title style="text-align: center; margin-right: 5%;">
+    <ion-title style="text-align: center;">
       Your Finances
     </ion-title>
   </ion-toolbar>
