--- a/myFinances/src/app/app.component.html
+++ b/myFinances/src/app/app.component.html
@@ -8,8 +8,8 @@
     </ion-header>
     <ion-content class="ion-padding">
       <ion-list>
-        <ion-item (click)="register()">Register</ion-item>
-        <ion-item (click)="login()">Login</ion-item>
+        <ion-item (click)="currency()">Currency converter</ion-item>
+        <ion-item (click)="tipCalc()">Tip Calculator</ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
