--- a/myFinances/src/app/home/home.page.html
+++ b/myFinances/src/app/home/home.page.html
@@ -1,15 +1,15 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button class="button" (click) = "toggleMenu()">
-        <ion-icon name="menu" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title style="text-align: center; margin-right: 5%;">
-      Your Finances
-    </ion-title>
+  <ion-toolbar class="header-toolbar">
+    <div class="header-title">
+      <ion-title>Your Finances</ion-title>
+    </div>
+    <div class="header-links">
+      <a class="menu-link" slot="end" href="/login">Login</a>
+      <a class="menu-link" slot="end" href="/register">Register</a>
+    </div>
   </ion-toolbar>
 </ion-header>
+
 
 <!--Contenido dentro de la tab-->
 <ion-content [fullscreen]="true">
