--- a/myFinances/src/app/home_loggeado/homeLog.page.scss
+++ b/myFinances/src/app/home_loggeado/homeLog.page.scss
@@ -20,23 +20,20 @@
 
 .buttons {
   margin-top: 50px;
-}
-
-ion-item {
-  --background: #f5f5f5;
-  --color:black;
-}
-
-ion-button {
   --background: #15DC4E;
   --color:black;
   width: 300px;
   margin-top: 50px;
   font-family: Arial, Helvetica, sans-serif;
   --border-radius: 15%;
-  }
+}
+
+ion-item {
+  --background: #f5f5f5;
+  --color:black;
+}
   
-  ion-button:hover {
+  .buttons:hover {
   --background: #039D2E;
   --border-radius: 15%;
   border-radius: 15%;
@@ -59,4 +56,8 @@ ion-button {
     border-radius: 15%;
     box-shadow: 0px 0px 20px 5px #039D2E;
     --color: white;
+    }
+  
+    .button:hover{
+
     }
