--- a/myFinances/src/app/settingsLogPage/settingsLog.page.html
+++ b/myFinances/src/app/settingsLogPage/settingsLog.page.html
@@ -1,6 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title style="text-align: center;">
+    <ion-buttons slot="start">
+      <ion-button class="button" (click) = "toggleMenu()">
+        <ion-icon name="menu" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title style="text-align: center; margin-right: 5%;">
       Your Finances
     </ion-title>
   </ion-toolbar>
