--- a/myFinances/src/app/currency/currency.page.html
+++ b/myFinances/src/app/currency/currency.page.html
@@ -6,7 +6,7 @@
           <ion-icon name="home" (click)="home()" class="home"></ion-icon>
         </ion-col>
         <ion-col>
-          <ion-title  style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Login</ion-title>
+          <ion-title style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Currency Converter</ion-title>
         </ion-col>
         <ion-col></ion-col>
       </ion-row>
@@ -14,13 +14,68 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-item>
-      <ion-label position="stacked">Email</ion-label>
-    </ion-item>
-    <ion-item>
-        <ion-label position="stacked">Password</ion-label>
-    </ion-item>
-  </ion-list>
-</ion-content>
+<div class="container">
+  <ion-content>
+    <ion-list>
+      <ion-item>
+        <ion-label position="stacked">Amount</ion-label>
+        <ion-input type="number" [(ngModel)]="amount"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="stacked">From Currency</ion-label>
+        <ion-select [(ngModel)]="fromCurrency">
+          <ion-select-option value="USD">USD</ion-select-option>
+          <ion-select-option value="EUR">EUR</ion-select-option>
+          <ion-select-option value="GBP">GBP</ion-select-option>
+          <ion-select-option value="JPY">JPY</ion-select-option>
+          <ion-select-option value="CHF">CHF</ion-select-option>
+          <ion-select-option value="CNY">CNY</ion-select-option>
+          <ion-select-option value="ARS">ARS</ion-select-option>
+          <ion-select-option value="CLP">CLP</ion-select-option>
+          <ion-select-option value="COP">COP</ion-select-option>
+          <ion-select-option value="MXN">MXN</ion-select-option>
+          <ion-select-option value="PLN">PLN</ion-select-option>
+          <ion-select-option value="CAD">CAD</ion-select-option>
+          <ion-select-option value="CZK">CZK</ion-select-option>
+          <ion-select-option value="DKK">DKK</ion-select-option>
+          <ion-select-option value="ISK">ISK</ion-select-option>
+          <ion-select-option value="NOK">NOK</ion-select-option>
+          <ion-select-option value="SEK">SEK</ion-select-option>
+        </ion-select>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="stacked">To Currency</ion-label>
+        <ion-select [(ngModel)]="toCurrency">
+          <ion-select-option value="USD">USD</ion-select-option>
+          <ion-select-option value="EUR">EUR</ion-select-option>
+          <ion-select-option value="GBP">GBP</ion-select-option>
+          <ion-select-option value="JPY">JPY</ion-select-option>
+          <ion-select-option value="CHF">CHF</ion-select-option>
+          <ion-select-option value="CNY">CNY</ion-select-option>
+          <ion-select-option value="ARS">ARS</ion-select-option>
+          <ion-select-option value="CLP">CLP</ion-select-option>
+          <ion-select-option value="COP">COP</ion-select-option>
+          <ion-select-option value="MXN">MXN</ion-select-option>
+          <ion-select-option value="PLN">PLN</ion-select-option>
+          <ion-select-option value="CAD">CAD</ion-select-option>
+          <ion-select-option value="CZK">CZK</ion-select-option>
+          <ion-select-option value="DKK">DKK</ion-select-option>
+          <ion-select-option value="ISK">ISK</ion-select-option>
+          <ion-select-option value="NOK">NOK</ion-select-option>
+          <ion-select-option value="SEK">SEK</ion-select-option>
+        </ion-select>
+      </ion-item>
+
+      <ion-item *ngIf="convertedAmount">
+        <ion-label position="stacked">Converted Amount</ion-label>
+        <ion-input type="text" readonly [value]="convertedAmount"></ion-input>
+      </ion-item>
+    </ion-list>
+
+    <div class="ion-text-center">
+      <ion-button (click)="convert()">Convert</ion-button>
+    </div>
+  </ion-content>
+</div>
