--- a/myFinances/src/app/home_loggeado/homeLog.page.html
+++ b/myFinances/src/app/home_loggeado/homeLog.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button class="button" (click) = "toggleMenu()">
+      <ion-button class="button" (click)="toggleMenu()">
         <ion-icon name="menu" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -11,70 +11,58 @@
   </ion-toolbar>
 </ion-header>
 
+<div class="container">
+  <ion-grid id="buttonContainer">
+    <ion-row>
+      <ion-col>
+        <ion-button expand="full" (click)="mostrarFormulario1()" class="buttons">DECLARE EXPENSE</ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-button expand="full" (click)="mostrarFormulario2()" class="buttons">DECLARE INCOME</ion-button>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <ion-button expand="full" (click)="mostrarFormulario3()" class="buttons">DECLARE CATEGORY LIMIT</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
+  <ion-card style="width:40%;padding: 2rem; background: transparent;" class="contenedor-formularios">
+    <form id="formulario1" style="display:none;">
+      <button class="close-button" (click)="cerrarFormulario('formulario1')" style="color: black; background-color: whitesmoke;"><u>Close</u></button>
+      <h2 class="form-title" style="color: black; margin-left: 25%;">DECLARE EXPENSE</h2><br>
+      <ion-input id="description-input" label="Description" labelPlacement="floating" placeholder="Enter a description" style="color: black;"></ion-input>
+      <category-select></category-select>
+      <ion-input id="quantity-input" label="Quantity" labelPlacement="floating" placeholder="Enter a quantity" style="color: black;"></ion-input><br>
+      <ion-button (click)="declareExpense()" class="send" style="margin-left: 40%;">Send</ion-button>
+    </form>
 
-  <div class="container">
-    <ion-grid id="buttonContainer">
-      <ion-row>
-        <ion-col>
-          <ion-button expand="full" (click)="mostrarFormulario1()" class="buttons">DECLARE EXPENSE</ion-button>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <ion-button expand="full" (click)="mostrarFormulario2()" class="buttons">DECLARE INCOME</ion-button>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <ion-button expand="full" (click)="mostrarFormulario3()" class="buttons">DECLARE CATEGORY LIMIT</ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <form id="formulario2" style="display:none;">
+      <button class="close-button" (click)="cerrarFormulario('formulario2')" style="color: black; background-color: whitesmoke;"><u>Close</u></button>
+      <h2 class="form-title" style="color: black; margin-left: 25%;">DECLARE INCOME</h2><br>
+      <ion-input id="desc-input" label="Description" labelPlacement="floating" placeholder="Enter a description" style="color: black;"></ion-input><br>
+      <ion-input id="income-input" label="Income" labelPlacement="floating" placeholder="Enter an income" style="color: black;"></ion-input><br>
+      <ion-button (click)="declareIncome()" class="send" style="margin-left: 40%;">Send</ion-button>
+    </form>
 
-
-
-    <ion-card style="width:40%;padding: 2rem; background: transparent;"class="contenedor-formularios">
-      <form id="formulario1" style="display:none;">
-        <button class="close-button" (click)="cerrarFormulario('formulario1')" style="color: black; background-color: whitesmoke;"><u>Close</u></button>
-        <h2 class="form-title" style="color: black; margin-left: 25%;">DECLARE EXPENSE</h2><br>
-        <ion-input id="description-input" label="Description" labelPlacement="floating" placeholder="Enter a description" style="color: black;"></ion-input>
-        <ion-list style="background-color: #f5f5f5;">
-          <ion-item>
-            <ion-select aria-label="fruit" placeholder="Category" id="category-select">
-              <ion-select-option value="Sport">Sport</ion-select-option>
-              <ion-select-option value="Food">Food</ion-select-option>
-              <ion-select-option value="Games">Games</ion-select-option>
-            </ion-select>
-          </ion-item>
-        </ion-list>
-         <ion-input id="quantity-input" label="Quantity" labelPlacement="floating" placeholder="Enter a quantity" style="color: black;"></ion-input><br>
-        <ion-button (click)="declareExpense()" class="send" style="margin-left: 40%;">Send</ion-button>
-      </form>
-
-      <form id="formulario2" style="display:none;">
-        <button class="close-button" (click)="cerrarFormulario('formulario2')" style="color: black; background-color: whitesmoke;"><u>Close</u></button>
-        <h2 class="form-title"  style="color: black; margin-left: 25%;">DECLARE INCOME</h2><br>
-        <ion-input id="desc-input" label="Description" labelPlacement="floating" placeholder="Enter a description" style="color: black;"></ion-input><br>
-        <ion-input id="income-input" label="Income" labelPlacement="floating" placeholder="Enter an income" style="color: black;"></ion-input><br>
-        <ion-button (click)="declareIncome()" class="send" style="margin-left: 40%;">Send</ion-button>
-      </form>
-
-      <form id="formulario3" style="display:none;">
-        <button class="close-button" (click)="cerrarFormulario('formulario3')" style="color: black; background-color: whitesmoke;"><u>Close</u></button>
-        <h2 class="form-title"  style="color: black; margin-left: 19%;">DECLARE CATEGORY LIMIT</h2><br>
-        <ion-list style="background-color: #f5f5f5;">
-          <ion-item>
-            <ion-select aria-label="fruit" placeholder="Category">
-              <ion-select-option value="apples">Apples</ion-select-option>
-              <ion-select-option value="oranges">Oranges</ion-select-option>
-              <ion-select-option value="bananas">Bananas</ion-select-option>
-            </ion-select>
-          </ion-item>
-        </ion-list>
-        <ion-input label="Limit" labelPlacement="floating" placeholder="Enter a limit" style="color: black;"></ion-input><br>
-        <ion-button  (click) ="declareIncome()" class="send" style="margin-left: 40%;">Send</ion-button>
-      </form>
-      <p id="welcome" style="display: block; color: black;">Welcome to your finances application, now you are logged in.</p>
-    </ion-card>
-  </div>
+    <form id="formulario3" style="display:none;">
+      <button class="close-button" (click)="cerrarFormulario('formulario3')" style="color: black; background-color: whitesmoke;"><u>Close</u></button>
+      <h2 class="form-title" style="color: black; margin-left: 19%;">DECLARE CATEGORY LIMIT</h2><br>
+      <ion-list style="background-color: #f5f5f5;">
+        <ion-item>
+          <ion-select aria-label="fruit" placeholder="Category">
+            <ion-select-option value="apples">Apples</ion-select-option>
+            <ion-select-option value="oranges">Oranges</ion-select-option>
+            <ion-select-option value="bananas">Bananas</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-list>
+      <ion-input label="Limit" labelPlacement="floating" placeholder="Enter a limit" style="color: black;"></ion-input><br>
+      <ion-button (click)="declareIncome()" class="send" style="margin-left: 40%;">Send</ion-button>
+    </form>
+    <p id="welcome" style="display: block; color: black;">Welcome to your finances application, now you are logged in.</p>
+  </ion-card>
+</div>
