--- a/myFinances/src/app/settingsLogPage/settingsLog.page.scss
+++ b/myFinances/src/app/settingsLogPage/settingsLog.page.scss
@@ -1,33 +1,59 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: whitesmoke;
+}
+
+.title {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.description {
+  font-size: 18px;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+ion-button {
+  margin-top: 50px;
+  --background: #15DC4E;
+  --color:black;
+  width: 300px;
+  margin-top: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  --border-radius: 15%;
+}
+
+ion-item {
+  --background: #f5f5f5;
+  --color:black;
+}
+  
+  ion-button:hover {
+  --background: #039D2E;
+  --border-radius: 15%;
+  border-radius: 15%;
+  box-shadow: 0px 0px 20px 5px #039D2E;
+  --color: white;
   }
 
-  .title {
-    font-size: 32px;
-    margin-bottom: 20px;
+  .send{
+    --background: #15DC4E;
+    --color:black;
+    width: 100px;
+    margin-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    --border-radius: 15%;
   }
 
-  .description {
-    font-size: 18px;
-    margin-bottom: 40px;
-    text-align: center;
-  }
-
-  .buttonContent {
-    font-size: 24px;
-    padding: 10px 20px;
-    border-radius: 10px;
-    background-color: #007bff;
-    color: white;
-    margin-bottom: 20px;
-    cursor: pointer;
-  }
-
-  .button{
-    background-color:  #15DC4E  ;
-  }
+  .send:hover {
+    --background: #039D2E;
+    --border-radius: 15%;
+    border-radius: 15%;
+    box-shadow: 0px 0px 20px 5px #039D2E;
+    --color: white;
+    }
