--- a/myFinances/src/app/goals_loggeado/goalsLog.page.html
+++ b/myFinances/src/app/goals_loggeado/goalsLog.page.html
@@ -1,13 +1,14 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button class="button" (click) = "toggleMenu()">
+      <ion-button class="button" (click)="toggleMenu()">
         <ion-icon name="menu" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title style="text-align: center; margin-right: 5%;">
+    <ion-title style="text-align: center; margin-left: 100px;">
       Your Finances
     </ion-title>
+    <p slot="end" style="margin-right: 20px;">Actual Balance: {{currentBalance}} €</p>
   </ion-toolbar>
 </ion-header>
 
