perfil con imagen

--- a/myFinances/src/app/profile/profile.page.html
+++ b/myFinances/src/app/profile/profile.page.html
@@ -30,6 +30,13 @@
       <ion-card-content>
         <!-- Add your personal information fields here -->
         <ion-item>
+          <ion-avatar style="width: 1000px; height: 200px;">
+            <img [src]="userProfileImage" style="object-fit: cover; width: 1000px; height: 100%;" />
+          </ion-avatar>
+          <input style="width: 100%; margin-left: 50px;" type="file" accept="image/*" (change)="onProfilePictureChange($event)" />
+        </ion-item>                    
+
+        <ion-item>
           <ion-label>Name</ion-label>
           <ion-input type="text" readonly [value]="userName"></ion-input>
         </ion-item>
