--- a/myFinances/src/app/home_loggeado/homeLog.page.html
+++ b/myFinances/src/app/home_loggeado/homeLog.page.html
@@ -38,6 +38,13 @@
       <ion-input id="description-input" label="Description" labelPlacement="floating" placeholder="Enter a description" style="color: black;"></ion-input>
       <category-select style="background-color: #f5f5f5;"></category-select>
       <ion-input id="quantity-input" label="Quantity" labelPlacement="floating" placeholder="Enter a quantity" style="color: black;"></ion-input><br>
+      <ion-datetime-button datetime="datetime" ></ion-datetime-button>
+
+      <ion-modal [keepContentsMounted]="true">
+        <ng-template>
+          <ion-datetime id="datetime" presentation="date" display-format="MMM DD, YYYY" ></ion-datetime>
+        </ng-template>
+      </ion-modal>
       <ion-button (click)="declareExpense()" class="send" style="margin-left: 40%;">Send</ion-button>
     </form>
 
@@ -46,6 +53,7 @@
       <h2 class="form-title" style="color: black; margin-left: 25%;">DECLARE INCOME</h2><br>
       <ion-input id="desc-input" label="Description" labelPlacement="floating" placeholder="Enter a description" style="color: black;"></ion-input><br>
       <ion-input id="income-input" label="Income" labelPlacement="floating" placeholder="Enter an income" style="color: black;"></ion-input><br>
+
       <ion-button (click)="declareIncome()" class="send" style="margin-left: 40%;">Send</ion-button>
     </form>
 
