--- a/myFinances/src/app/home_loggeado/homeLog.page.html
+++ b/myFinances/src/app/home_loggeado/homeLog.page.html
@@ -4,6 +4,9 @@
       <ion-button class="button" (click)="toggleMenu()">
         <ion-icon name="menu" slot="icon-only"></ion-icon>
       </ion-button>
+      <ion-button  (click)="bulbTips()"  class="bulbIcon">
+        <ion-icon name="bulb" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
     <ion-title style="text-align: center; margin-left: 100px;">
       Your Finances
