--- a/myFinances/src/app/home_loggeado/homeLog.page.scss
+++ b/myFinances/src/app/home_loggeado/homeLog.page.scss
@@ -57,3 +57,7 @@ ion-item {
     box-shadow: 0px 0px 20px 5px #039D2E;
     --color: white;
     }
+
+    .bulbIcon:hover{
+      color: white;
+    }
